--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,14 @@
 		    <artifactId>tomcat-jasper</artifactId>
 		    <version>9.0.71</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-xml -->
+		<dependency>
+		    <groupId>com.fasterxml.jackson.dataformat</groupId>
+		    <artifactId>jackson-dataformat-xml</artifactId>
+		    <version>2.13.4</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
